@@ -10,7 +10,7 @@ qsvd <- function(x) {
     svdmem <- new("svd_mem", ncol(x)) 
     dummy <- .Call("CR_svd", x, svdmem, PACKAGE = "party")
     rm(dummy)
-    return(svdmem@svd)
+    return(list(u = svdmem@u, vt = svdmem@v, d = svdmem@s))
 }
 
 MPinv <- function(x, tol = sqrt(.Machine$double.eps)) {
