@@ -1,3 +1,2 @@
 
-PKG_LIBS = $(BLAS_LIBS) $(FLIBS)
-
+PKG_LIBS = $(LAPACK_LIBS) $(BLAS_LIBS) $(FLIBS)
